# formati

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: anyhow_integration.rs  basic.rs  log_integration.rs  stdio.rs  tracing_integration.rs
src/: formati_args.rs  lib.rs  like_tracing.rs
tests/: test_anyhow.rs  test_formati.rs  test_log.rs  test_stdio.rs  test_tracing.rs
