[package]
name = "formati"
version = "0.1.3"
edition = "2021"
authors = ["nobane"]
description = "Enhanced formatting macros with dotted notation and expression interpolation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nobane/formati"

[lib]
proc-macro = true

[features]
default = []
anyhow = []
log = []
stdio = []
tracing = []

[dependencies]
proc-macro2 = "1.0.95"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.98"
log = "0.4.27"
stdio-override = "0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
